# pokemonpy

./: CREDITS.txt  README.md  agame.py  arizona.npy  base_pokemon.py  boo.sav  config.txt  config_pokemonpy.txt  cynthia.sav  dexpoke.py  hooh.sav  log.md  log.txt  montwo.npy  montwo.sav  moremon.py  movecodex.txt  movedex.txt  movedex2.txt  moves.py  newmew.npy  pokedex.py  pokemon.py  pypokemon.sav  pyproject.toml  save2.npy  saved_dexpoke.npy  saved_movedex.npy  show2.sav  show3.sav  showdown.sav  somemons_copy.txt  test  test.npy  test_trainer.ipynb  testing_showdownsaves.ipynb  texter.py  thefirstpokemon.npy  time_ref.txt  trainerai.py  (+1 more)
.ipynb_checkpoints/: test_trainer-checkpoint.ipynb
LICENSES/: python_license.txt
configurations/: config.txt  default_config.txt  second_config.txt
documentation/: CREDITS.txt  devdiary.txt  game_blurb.md  log.md  time_ref.txt
documentation/archive/: moremon.py
elite5/: elite_1.npy  elite_2.npy  elite_3.npy  elite_4.npy  elite_5.npy
src/pokemonpy/: __init__.py  base_pokemon.py  dexpoke.py  mini_moves.py  moves.py  older_moves.py  pokemon.py  trainerai.py  victoryroad.py
src/pokemonpy/configurations/: config.txt
src/pokemonpy/documentation/: CREDITS.txt  game_blurb.md
src/pokemonpy/documentation/archive/: saved_dexpoke.npy  saved_movedex.npy  saved_natures.npy
src/pokemonpy/elite5/: elite_2.npy  elite_3.npy  elite_4.npy
src/pokemonpy/saves/: demoteam.sav  pypokemon.sav
src/pokemonpy/scripts/: rungame.py
